* before pedialite, fixed ----'s <spelt#4788962>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -4,11 +4,11 @@
 ''Chiefly British'', through ''French'' [[espeller]] and dialect nuance.
 
 ====Alternative spellings====
-*[[spelled]]
+* [[spelled]]
 
 ====Pronunciation====
-*{{IPA|/'spεlt/}}
-*:Rhymes: [[Rhymes:English:-ɛlt|-ɛlt]]
+* {{IPA|/'spεlt/}}
+*: Rhymes: [[Rhymes:English:-ɛlt|-ɛlt]]
 
 ====Verb====
 '''spelt'''
@@ -16,15 +16,15 @@
 # {{past of|[[spell#Verb|spell]]}}
 
 =====Quotations=====
-*'''1590''', {{w|William Shakespeare}}, ''[[s:Love's Labour's Lost|Love's Labour's Lost]], v 1''
-*:Yes, yes; he teaches boys the hornbook. What is a, b, '''spelt''' / backward with the horn on his head?
+* '''1590''', {{w|William Shakespeare}}, ''[[s:Love's Labour's Lost|Love's Labour's Lost]], v 1''
+*: Yes, yes; he teaches boys the hornbook. What is a, b, '''spelt''' / backward with the horn on his head?
 
 ===Etymology 2===
-{{rfe}} 
+{{rfe}}
 
 ====Pronunciation====
-*{{IPA|/'spεlt/}}
-*Rhymes: [[Rhymes:English:-ɛlt|-ɛlt]]
+* {{IPA|/'spεlt/}}
+* Rhymes: [[Rhymes:English:-ɛlt|-ɛlt]]
 
 ====Noun====
 {{en-noun|-}}
@@ -40,12 +40,14 @@
 {{trans-bottom}}
 
 =====See also=====
-{{pedialite}}
+* {{pedialite}}
+
+----
 
 ==Dutch==
 
 ===Pronunciation===
-*{{audio|Nl-spelt.ogg|audio}}
+* {{audio|Nl-spelt.ogg|audio}}
 
 ===Noun===
 '''spelt''' {{n}}
