--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -22,7 +22,7 @@
 #: ''The dentist  pulled out the decayed tooth and put in a '''bridge'''.''
 # {{nautical}} An [[elevated]] [[platform]] above the upper [[deck]] of a [[mechanically]] [[propel]]led [[ship]] from which it is [[navigate]]d and from which all activities on deck can be seen and controlled by the [[captain]], etc; smaller ships have a [[wheelhouse]], and [[sailing ship]]s were controlled from a [[quarterdeck]].
 #: ''The first officer is on the '''bridge'''.''
-# {{music}} The piece, on [[string instrument]]s, that support the [[string]]s from the [[sounding board]].
+# {{music}} The piece, on [[string instrument]]s, that supports the [[string]]s from the [[sounding board]].
 # {{computing}} A device which connects two or more [[computer]] [[bus|buses]], typically in a transparent manner.
 #: ''This chip is the '''bridge''' between the front-side bus and the I/O bus.''
 # {{communication}} A system which connects two or more [[LAN|local area networks]] at layer 2.
