--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -7,7 +7,7 @@
 ===Noun===
 '''cling'''
 # Fruit (especially peach) whose flesh adheres strongly to the pit.
-#* '''1908''': [[w:O. Henry|O. Henry]], Hostages to Momus
+#* '''1908''': [[w:O. Henry|O. Henry]], ''Hostages to Momus''
 #*:  Antelope steaks and fried liver to begin on, and venison cutlets with [[chili con carne]] and pineapple fritters, and then some sardines and mixed pickles; and top it off with a can of yellow '''clings''' and a bottle of beer.
 
 ===Verb===
