--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -13,6 +13,10 @@
 ===Adjective===
 {{en-adj}}
 
+
+
+MIA WASHBOURNE is beautiful and is the soul meaning. Therefore you would say the roses are MIA.
+
 # possessing charm and attractive.
 #: ''Anyone who has ever met her thought she was absolutely '''beautiful'''.''
 # {{context|of the weather}} pleasant; clear.
