--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -23,10 +23,14 @@
 
 ====Translations====
 {{trans-top|fair skinned/haired person}}
+* French: [[blond]] {{m}}, [[blonde]], {{f}}
 * Hebrew: [[בלונדיני]] (blondyni) {{m}}, [[בלונדינית]] (blondynit) {{f}}
 * Hungarian: {{t+|hu|szőke}}
 * [[Ido]]: [[blonda]]
 * Irish: [[fionn]] (of both males and females), [[fear#Irish|fear]] fionn {{m}}, [[bean#Irish|bean]] fhionn {{f}}
+* Italian: [[biondo]] {{m}}, [[bionda]], {{f}}
+* Latin: [[fulvius]], [[lauricomus]]  {{m}}, [[fulvia]], [[lauricoma]] {{f}}
+* Portuguese: [[louro]], [[laurícomo]], [[flavícomo]], [[fulvícomo]], [[blondícomo]], [[claricápilo]], [[alvo]] {{m}}, [[loura]], [[laurícoma]] [[flavícoma]], [[fulvícoma]], [[blondícoma]], [[claricápila]], [[alva]]{{f}}; "hypocorism" [[lourinho]], [[galeguinho]], [[blondinet]] {{m}}, [[lourinha]], [[galeguinha]], [[blondinette]] {{f}}
 * Russian: {{t+|ru|блондин|m|tr=blondín|sc=Cyrl}}, {{t+|ru|блондинка|f|tr=blondínka|sc=Cyrl}}
 * [[Scottish Gaelic]]: [[bàn]], [[fionn]] (of both males and females), [[fear#Scottish Gaelic|fear]] bàn {{m}}, [[bean#Scottish Gaelic|bean]] bhàn {{f}}
 {{trans-mid}}
