--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -34,7 +34,7 @@
 * Italian: [[biondo]] {{m}}, [[bionda]], {{f}}
 * Latin: [[fulvius]], [[lauricomus]], [[flavicomus]] {{m}}, [[fulvia]], [[lauricoma]], [[flavicoma]]{{f}}
 * Norwegian: [[lys(håret)]], [[blond]], [[blondine]]
-* Portuguese: [[louro]], [[laurícomo]], [[flavícomo]], [[fulvícomo]], [[blondícomo]], [[claricápilo]], [[alvo]] {{m}}, [[loura]], [[laurícoma]], [[flavícoma]], [[fulvícoma]], [[blondícoma]], [[claricápila]], [[alva]]{{f}}; "hypocorism" [[lourinho]], [[galeguinho]], [[blondinet]], [[clarinho]] {{m}}, [[lourinha]], [[galeguinha]], [[blondinette]], [[clarinha]] {{f}}
+* Portuguese: [[louro]], [[laurícomo]], [[loiro]], [[flavícomo]], [[fulvícomo]], [[blondícomo]], [[claricápilo]], [[alvo]] {{m}}, [[loura]], [[laurícoma]], [[loira]], [[flavícoma]], [[fulvícoma]], [[blondícoma]], [[claricápila]], [[alva]]{{f}}; "hypocorism" [[lourinho]], [[galeguinho]], [[blondinet]], [[clarinho]] {{m}}, [[lourinha]], [[galeguinha]], [[blondinette]], [[clarinha]] {{f}}
 * Romanian: [[blondă]]
 * Russian: {{t+|ru|блондин|m|tr=blondín|sc=Cyrl}}, {{t+|ru|блондинка|f|tr=blondínka|sc=Cyrl}}
 * [[Scottish Gaelic]]: [[bàn]], [[fionn]] (of both males and females), [[fear#Scottish Gaelic|fear]] bàn {{m}}, [[bean#Scottish Gaelic|bean]] bhàn {{f}}
