don't need every possible form <blond#4811468>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -23,23 +23,23 @@
 
 ====Translations====
 {{trans-top|fair skinned/haired person}}
-* Danish: [[lyshåret]]; [[blond]], [[blondine]]
-* Dutch:  [[blond]], [[blondine]]
-* French: [[blond]] {{m}}, [[blonde]], {{f}}
+* Danish: [[lyshåret]]; blond, [[blondine]]
+* Dutch:  blond, [[blondine]]
+* French: {{t|fr|blond}}
 * German:  [[Blond]] mann, die [[Blondine]]
 * Hebrew: [[בלונדיני]] (blondyni) {{m}}, [[בלונדינית]] (blondynit) {{f}}
 * Hungarian: {{t+|hu|szőke}}
 * [[Ido]]: [[blonda]]
 * Irish: [[fionn]] (of both males and females), [[fear#Irish|fear]] fionn {{m}}, [[bean#Irish|bean]] fhionn {{f}}
-* Italian: [[biondo]] {{m}}, [[bionda]], {{f}}
-* Latin: [[fulvius]], [[lauricomus]], [[flavicomus]] {{m}}, [[fulvia]], [[lauricoma]], [[flavicoma]]{{f}}
-* Norwegian: [[lys(håret)]], [[blond]], [[blondine]]
-* Portuguese: [[louro]], [[laurícomo]], [[flavícomo]], [[fulvícomo]], [[blondícomo]], [[claricápilo]], [[alvo]] {{m}}, [[loura]], [[laurícoma]], [[flavícoma]], [[fulvícoma]], [[blondícoma]], [[claricápila]], [[alva]] {{f}}; "hypocorism" [[lourinho]], [[galeguinho]], [[blondinet]], [[clarinho]] {{m}}, [[lourinha]], [[galeguinha]], [[blondinette]], [[clarinha]] {{f}}.
+* Italian: [[biondo]]
+* Latin: [[fulvius]], [[lauricomus]], [[flavicomus]]
+* Norwegian: [[lys(håret)]], blond, [[blondine]]
+{{trans-mid}}
+* Portuguese: [[louro]], [[laurícomo]], [[flavícomo]], [[fulvícomo]], [[blondícomo]], [[claricápilo]], [[alvo]]; "hypocorism" [[lourinho]], [[galeguinho]], [[blondinet]], [[clarinho]]
 * Romanian: [[blondă]]
 * Russian: {{t+|ru|блондин|m|tr=blondín|sc=Cyrl}}, {{t+|ru|блондинка|f|tr=blondínka|sc=Cyrl}}
 * [[Scottish Gaelic]]: [[bàn]], [[fionn]] (of both males and females), [[fear#Scottish Gaelic|fear]] bàn {{m}}, [[bean#Scottish Gaelic|bean]] bhàn {{f}}
-{{trans-mid}}
-* Spanish: [[rubio]] {{m}}, [[canche]] {{m}} {{italbrac|Guatemala}}, [[catire]] {{m}} {{italbrac|Venezuela}}, [[chele]] {{m}} {{italbrac|El Salvador|Honduras|Nicaragua}},  [[choco]] {{m}} {{italbrac|Bolivia}}, [[fulo]] {{m}} {{italbrac|Panama}}, [[gringo]] {{m}} {{italbrac|Peru}}, [[güero]] {{m}} {{italbrac|Mexico}},  [[macho]] {{m}} {{italbrac|Costa Rica}},   [[mono]] {{m}} {{italbrac|Colombia}}, [[rucio]] {{m}} {{italbrac|Chile}}, [[suco]] {{m}} {{italbrac|Ecuador}}. For female : [[rubia]], [[canche]] {{italbrac|unchangeable}}, [[catira]], [[chela]], [[choca]], [[fula]], [[gringa]], [[güera]], [[macha]], [[mona]],  [[rucia]], [[suca]]
+* Spanish: [[rubio]] {{m}}, [[canche]] {{m}} {{italbrac|Guatemala}}, [[catire]] {{m}} {{italbrac|Venezuela}}, [[chele]] {{m}} {{italbrac|El Salvador|Honduras|Nicaragua}}, [[choco]] {{m}} {{italbrac|Bolivia}}, [[fulo]] {{m}} {{italbrac|Panama}}, [[gringo]] {{m}} {{italbrac|Peru}}, [[güero]] {{m}} {{italbrac|Mexico}}, [[macho]] {{m}} {{italbrac|Costa Rica}}, [[mono]] {{m}} {{italbrac|Colombia}}, [[rucio]] {{m}} {{italbrac|Chile}}, [[suco]] {{m}} {{italbrac|Ecuador}}
 * Swedish: {{t-|sv|blondin}}
 * Welsh: [[penfelyn]]
 {{trans-bottom}}
