--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -180,6 +180,8 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{trans-mid}}
 * Japanese: [[遊ぶ]] (asobu)
 * Korean: [[놀다]] (nolda)
+*Kurdish:
+*:Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=KUchar}}
 * Latin: [[lūdere]]
 * Old English: {{t-|ang|lacan|alt=lācan|xs=Old English}}
 * [[Pashto]]: {{PSchar|[[لوبې کول]]}}, {{PSchar|[[لوبېدل]]}}, {{PSchar|[[غږول]]}}
@@ -210,6 +212,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Hebrew: [[לנגן]] ב- (l'nāgen b'-)
 * Icelandic: [[spila]], [[spila á]] (+ {{dat}})
 * Italian: {{t+|it|suonare}}
+
 * Old English: {{t-|ang|lacan|alt=lācan|xs=Old English}}
 * Polish: [[grać]] na
 * Portuguese: {{t+|pt|tocar}}
@@ -230,6 +233,8 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Icelandic: {{t-|is|spila}}
 {{trans-mid}}
 * Japanese: [[演奏]]する (ensō suru)
+*Kurdish:
+*:Sorani: {{t|ku|مۆسیقا لێدان|tr=mósíqa lédan|sc=KUchar}}
 * Old English: {{t-|ang|lacan|alt=lācan|xs=Old English}}
 * Polish: {{t+|pl|grać}}
 * Portuguese: {{t+|pt|tocar}}
@@ -274,6 +279,8 @@ Old English ''[[pleġa]]'', ''plæġa''
 * French: [[jouer]] à
 {{trans-mid}}
 * Icelandic: {{t-|is|spila}}, {{t+|is|leika}}
+*Kurdish:
+*:Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=KUchar}}
 * Polish: [[grać]] w
 * Portuguese: {{t+|pt|jogar}}
 * Russian: {{t+|ru|играть|tr=igrát’|sc=Cyrl}} {{impf}}
@@ -291,6 +298,8 @@ Old English ''[[pleġa]]'', ''plæġa''
 * Hebrew: [[להשמיע]] (l'hāshmiʿā)
 {{trans-mid}}
 * Icelandic: {{t-|is|spila}}
+*Kurdish:
+*:Sorani: {{t|ku|لێدان|tr=lédan|sc=KUchar}}
 * Polish: [[grać]], [[odtwarzać]]
 * Portuguese: {{t+|pt|gravar}}
 * Slovene: [[predvajati]]
