/* Personal pronoun */ => pronoun <het#4835160>

--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -39,8 +39,7 @@
 * [[aan het]]
 * [[hetzelfde]]
 
-===Personal pronoun===
-{{rfc-header|Personal pronoun}}
+===Pronoun===
 '''het'''
 
 # ''Third-person singular, neuter, subjective:'' [[it]].
