--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -28,7 +28,7 @@
 * (''of the weather''): [[clear]], [[fine]], [[nice]], [[pleasant]], [[sunny]]
 * (''well executed''): [[excellent]], [[exceptional]], [[good]], [[great]], [[marvellous]]/[[marvelous]], [[perfect]], [[stylish]], [[wonderful]]
 * (''ironic: how unfortunate''): [[great]], [[marvellous]]/[[marvelous]], [[nice]], very nice, [[wonderful]] (''any of these can be prefixed with an [[intensifier]] such as'' [[bloody]], [[damned]] ''or'' [[just]])
-* (''as in a person''):[[Kela F.]]
+* (''as in a person''):[[Kela F. (''The Most Beautiful Girl In Da Galaxy)'' ]]
 
 ====Antonyms====
 * (''possessing charm and attractive''): [[grotesque]], [[hideous]], [[homely]], [[plain]], [[misshapen]], [[repulsive]], [[ugly]]
