--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -21,7 +21,12 @@
 # <!--not an interjection-->(''as a [[pro-sentence]]'') How beautiful that is!
 #: '''''Beautiful'''! What a catch!'' (referring to an athlete catching a ball)
 # <!--not an interjection-->(''as a pro-sentence; ironic'') How unfortunate that is!
-#: '''''Beautiful'''! I dropped the soup on the floor!''
+#: '''''Beautiful'''! I dropped the soup on the floor!'
+
+
+=== Noun ===
+1.Kela Ferguson /KEY-LUH/ /Phur- Guz - On/
+ 
 
 ====Synonyms====
 * (''possessing charm and attractive''): [[attractive]], [[cute]], [[fair]], [[good-looking]], [[gorgeous]], [[handsome]], [[hot]] (''slang''), [[lovely]], [[nice-looking]], [[pretty]], [[shapely]], [[fit]] (''slang'')
