--- a/en/昱/昱.16985.wikitext
+++ b/en/昱/昱.16985.wikitext
@@ -48,6 +48,12 @@
 
 # {{defn|Mandarin}}
 
+----
+
+==Vietnamese==
+===Han character===
+'''昱''' [[dục]])<!--for some reason this character is not in the Nom Foundation database-->
+
 [[fr:昱]]
 [[vi:昱]]
 [[zh:昱]]
