--- a/en/垓/垓.13079.wikitext
+++ b/en/垓/垓.13079.wikitext
@@ -62,6 +62,12 @@
 
 # {{defn|Mandarin}}
 
+----
+
+==Vietnamese==
+===Han character===
+'''垓''' ([[cai]], [[gay]], [[gây]])
+
 [[fr:垓]]
 [[ko:垓]]
 [[ja:垓]]
