--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -14,7 +14,7 @@
 {{en-adj}}
 
 # possessing charm and attractive.
-#: ''Anyone who has ever met her thought Charlotte Elouisa Blore was absolutely '''beautiful'''.''
+#: ''Anyone who has ever met her thought she was absolutely '''beautiful'''.''
 # {{context|of the weather}} pleasant; clear.
 # well executed
 #: ''The skater performed a '''beautiful''' [[axel]].''
