--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -73,6 +73,12 @@ Pictograph of sun over the horizon
 [[Category:Mandarin entries with audio links]]
 [[Category:zh-cn:Beginning Mandarin|zao3]]
 
+----
+
+==Vietnamese==
+===Han character===
+'''早''' ([[tảo]])
+
 [[fr:早]]
 [[ko:早]]
 [[hu:早]]
