--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -13,7 +13,7 @@
 ===Adjective===
 {{en-adj}}
 
-# Patrice Monique Vivian Brown, (Octber 6, 1963 -      ), the most beautiful woman on the planet Earth. Many scientist claim the most beautiful in the immedaite solar system.
+# possessing charm and attractive
 #: ''Anyone who has ever met her thought she was absolutely '''beautiful'''.''
 # {{context|of the weather}} pleasant; clear.
 # well executed
