--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -10,7 +10,7 @@ From {{SH.}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the
 ===Proper noun===
 '''Yugoslavia'''
 
-# Former country on the [[Balkan Peninsula]]. In addition to [[Serbia]] and [[Montenegro]], [[Republic of Macedonia]], [[Bosnia and Herzegovina|Bosnia-Herzegovina]], [[Slovenia]], and [[Croatia]] were also part of the Yugoslav Federation prior to the 1990s.
+# Former country on the [[Balkan Peninsula]]. In addition to [[Serbia]] and [[Montenegro]], [[Macedonia|Republic of Macedonia]], [[Bosnia and Herzegovina|Bosnia-Herzegovina]], [[Slovenia]], and [[Croatia]] were also part of the Yugoslav Federation prior to the 1990s.
 
 ====Translations====
 {{top}}
