--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -1,10 +1,13 @@
 ==English==
 {{wikipedia}}
+===Pronunciation===
+* {{a|UK|US}} {{IPA|/ˈtʃɛk rɪˈpʌb.lɪk/}}
+* {{audio|en-us-Czech Republic.ogg|Audio (US)}}
 
 ===Proper noun===
 {{en-proper noun}}
 
-# Country in Central Europe. Official short-form name: [[Czechia]].
+# A [[country]] in [[Central Europe]]. Official short-form name: [[Czechia]].
 
 ====Translations====
 {{trans-top|country in Central Europe}}
