/* Pronunciation */ + audio; cleanup <Germany#4887547>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -2,11 +2,10 @@
 {{wikipedia}}
 
 ===Pronunciation===
-* British {{IPA|[ˈdʒɜːmənɪ]}}
-* British {{SAMPA|/"dZ3:m@nI/}}
-* US {{IPA|[ˈdʒɝməni]}}
-* US {{SAMPA|/"dZ3`m@ni/}}
+* {{a|UK}} {{IPA|/ˈdʒɜː.mə.nɪ/}}, {{SAMPA|/"dZ3:m@nI/}}
 * {{audio|en-uk-germany.ogg|Audio (UK)}}
+* {{a|US}} {{IPA|/ˈdʒɝ.mə.ni/}}, {{SAMPA|/"dZ3`m@ni/}}
+* {{audio|en-us-Germany.ogg|Audio (US)}}
 
 ===Proper noun===
 '''Germany''' (''[[countable]] and [[uncountable]]; plural'' '''Germanies''')
