--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -54,6 +54,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * Latvian: [[atrast]]
 * Lithuanian: [[surasti]]
 * Mongolian: [[олох]]
+* Norwegian: [[finne]]
 * Polish: {{t+|pl|znajdować}}
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
 * Romanian: {{t+|ro|găsi}}
@@ -69,6 +70,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * Finnish: {{t+|fi|osoittaa}}
 * Japanese: [[指摘]]する (してきする, shiteki-suru)
 {{trans-mid}}
+* Norwegian: [[finne]]
 * Portuguese: {{t+|pt|achar}}, {{t+|pt|encontrar}}
 * Russian: [[выискивать]]
 * Swedish: {{t+|sv|finna}}, {{t+|sv|hitta}}
@@ -79,6 +81,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * Dutch: [[vinden]], [[van mening zijn]] dat
 * Finnish: {{t+|fi|pitää}}
 {{trans-mid}}
+* Norwegian: [[finne]]
 * Portuguese: {{t+|pt|achar}}
 * Russian: {{t+|ru|находить|sc=Cyrl}}
 * Swedish: [[finna]], [[konstatera]],
@@ -90,6 +93,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * Esperanto: [[juĝi]]
 * Japanese: [[評決]]する (ひょうけつする, hyōketsu-suru)
 {{trans-mid}}
+* Norwegian: [[finne]]
 * Russian: {{t+|ru|находить|sc=Cyrl}}
 * Spanish: {{t-|es|determinar}}, {{t-|es|juzgar}}
 * Swedish: {{t+|sv|finna}}, {{t-|sv|konstatera}}
