--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -123,6 +123,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * French: {{t+|fr|trouvaille|f}}
 * Icelandic: {{t-|is|fundur|m}}
 {{trans-mid}}
+* Norwegian: [[funn]] {{n}}
 * Polish: [[znalezisko]] {{n}}
 * Romanian: {{t-|ro|descoperire|f}}
 * Russian: {{t+|ru|находка|f|sc=Cyrl}}
