--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -31,6 +31,7 @@
 *Japanese: [[掛ける]] ([[かける]], kakeru), [[ぶら下がる]] ([[ぶらさがる]], burasagaru), [[ぶら下げる]] ([[ぶらさげる]], burasageru)
 *Spanish: [[sostener]], [[aferrarse]] or [[sujetar]]
 {{bottom}}
+*Português [[agarrar]]
 
 ===References===
 *{{R:Century 1911}}
