--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -22,17 +22,16 @@
 
 ====Translations====
 {{top}}
-*Dutch: [[klampen]]
-*Finnish: [[takertua]], [[tarrautua]]
-*[[Galician]]: [[soster]], [[agarrar]] or [[suxeitar]]
-*Indonesian: [[sangkut|menyangkut]], [[sangkut|menyangkutkan]], [[gantung|bergantung]], [[gantung|menggantung]], [[gantung|menggantungkan]]
+* Dutch: [[klampen]]
+* Finnish: [[takertua]], [[tarrautua]]
+* [[Galician]]: [[soster]], [[agarrar]] or [[suxeitar]]
+* Indonesian: [[sangkut|menyangkut]], [[sangkut|menyangkutkan]], [[gantung|bergantung]], [[gantung|menggantung]], [[gantung|menggantungkan]]
 {{mid}}
-*Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources| ISBN 8839551107]]. [http://www.oxfordparavia.it/ Online version]</ref>
-*Japanese: [[掛ける]] ([[かける]], kakeru), [[ぶら下がる]] ([[ぶらさがる]], burasagaru), [[ぶら下げる]] ([[ぶらさげる]], burasageru)
-*Spanish: [[sostener]], [[aferrarse]] or [[sujetar]]
-*Português [[agarrar]]
+* Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources| ISBN 8839551107]]. [http://www.oxfordparavia.it/ Online version]</ref>
+* Japanese: [[掛ける]] ([[かける]], kakeru), [[ぶら下がる]] ([[ぶらさがる]], burasagaru), [[ぶら下げる]] ([[ぶらさげる]], burasageru)
+* Portuguese: [[agarrar]]
+* Spanish: [[sostener]], [[aferrarse]] or [[sujetar]]
 {{bottom}}
-*Português [[agarrar]]
 
 ===References===
 *{{R:Century 1911}}
