--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -14,6 +14,8 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}} from {{term|cinit|lang=enm}} from 
 #* The [[point]] in the [[celestial sphere]] opposite the [[nadir]].
 #* The point in the sky [[vertically]] above a given position or observer.
 #* The highest point in the sky reached by a [[celestial]] body.
+#* '''1719-''' [[w:Daniel Defoe|Daniel Defoe]], ''[[w:Robinson Crusoe|Robinson Crusoe]]''
+#*: ...in the middle of the day, when the sun was in the '''zenith''', the violence of the heat was too great to stir out...
 # Highest point or [[state]]; [[peak]].
 
 ====Synonyms====
