/* English */ Etymology fmt <bridge#4925152>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -8,7 +8,7 @@
 * {{rhymes|ɪdʒ}}
 
 ===Etymology 1===
-{{OE.}} {{term|brycg}}, from {{PG.}} *{{term||brugjā-}}.  Cognate with Dutch {{term|brug}}, German {{term|Brücke}}.
+From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lang=en}}.  Cognate with Dutch {{term|brug|lang=nl}}, German {{term|Brücke|lang=de}}.
 
 ====Noun====
 [[Image:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]]
@@ -230,7 +230,7 @@
 {{trans-bottom}}
 
 ===Etymology 3===
-{{OE.}} ''[[brycġian]]''
+From {{etyl|ang|en}} {{term|brycġian|lang=ang}}.
 
 ====Verb====
 {{en-verb|bridg|ing}}
