--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -72,7 +72,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * {{trreq|Lithuanian}}
 * {{trreq|Maltese}}
 * {{trreq|Norwegian}}
-* {{trreq|Old English}}
+* Old English: [[feohtan]]
 * {{trreq|Persian}}
 * Polish: {{t+|pl|walczyć}}
 * Portuguese: {{t+|pt|lutar}}
