--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -71,6 +71,12 @@ Pictographic representation of the sun ([[日]]) appearing over the horizon.
 
 [[Category:Old Korean nouns]]
 
+----
+
+==Vietnamese==
+===Han character===
+'''旦''' ([[đán]], [[đắn]], [[đến]])
+
 [[de:旦]]
 [[fr:旦]]
 [[ko:旦]]
