--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -17,8 +17,8 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 # the [[human]] body as a physical entity.
 # the skin of a human or animal.
 # the soft, often edible, parts of [[fruit]]s or [[vegetable]]s.
-# a [[yellow]]ish [[pink]] [[colour]]; the colour of some human skin.
-#: <table><tr><td>flesh colour: &nbsp;</td><td bgcolor="#FFC090" width="80">&nbsp; </td></tr></table>
+# a [[yellow]]ish [[pink]] [[colour]]; the colour of some [[Caucasian]] human skin.
+#: {{color panel|2=FFC090}}
 
 ====Translations====
 {{trans-top|body tissue}}
