--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -15,7 +15,7 @@
 # {{context|herb}} A [[seasoning]] made from the [[stigma]] of the saffron plant.
 # A [[dye]] made from the [[stigma]] of the saffron plant.
 # {{colour}} An [[orange]]-[[yellow]] [[color|colour]]. The color of a lion.
-#: <table><tr><td>saffron colour: &nbsp;</td><td bgcolor="#F4C430" width="80">&nbsp; </td></tr></table>
+#: {{color panel|2=F4C430}}
 
 ====Synonyms====
 * {{i|colour}} [[saffron yellow]]
