--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -18,7 +18,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 # the skin of a human or animal.
 # the soft, often edible, parts of [[fruit]]s or [[vegetable]]s.
 # a [[yellow]]ish [[pink]] [[colour]]; the colour of some [[Caucasian]] human skin.
-#: {{color panel|2=FFC090}}
+#: {{color panel|FFC090}}
 
 ====Translations====
 {{trans-top|body tissue}}
