--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -15,7 +15,7 @@
 # {{context|herb}} A [[seasoning]] made from the [[stigma]] of the saffron plant.
 # A [[dye]] made from the [[stigma]] of the saffron plant.
 # {{colour}} An [[orange]]-[[yellow]] [[color|colour]]. The color of a lion.
-#: {{color panel|2=F4C430}}
+#: {{color panel|F4C430}}
 
 ====Synonyms====
 * {{i|colour}} [[saffron yellow]]
