--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -17,7 +17,8 @@
 # The edible, fleshy stone [[fruit]] of ''Prunus domestica'', often of a dark red or purple colour.
 # The [[stone-fruit]] tree which bears this fruit, ''Prunus domestica''.
 # A dark [[bluish]]-[[red]] [[color]]/[[colour]], the colour of some plums.
-#: <table><tr><td>plum colour: &nbsp;</td><td bgcolor="#5F4951" width="80">&nbsp; </td></tr></table>
+#: {{color panel|5F4951}}
+#: {{color panel|web plum|CC99CC}}
 # A desirable thing.
 # A [[raisin]], when used in a pudding or cake.
 # {{pejorative}} A [[fool]], [[idiot]]
