Reverted edits by [[Special:Contributions/Bogorm|Bogorm]] ([[User_talk:Bogorm|Talk]]); changed back to last version by [[User:Zeitlupe|Zeitlupe]] <bridge#4938813>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -9,7 +9,7 @@
 * {{rhymes|ɪdʒ}}
 
 ===Etymology 1===
-From {{etyl|ang|en}} {{term|brycg|lang=ang}} and {{ON.}} {{term|brú}}, from {{proto|Germanic|brugjā-|lang=en}}.  Cognate with Dutch {{term|brug|lang=nl}}, German {{term|Brücke|lang=de}}.
+From {{etyl|ang|en}} {{term|brycg|lang=ang}}, from {{proto|Germanic|brugjā-|lang=en}}.  Cognate with Dutch {{term|brug|lang=nl}}, German {{term|Brücke|lang=de}}.
 
 ====Noun====
 [[Image:48 - Mende - Pont Notre-Dame.jpg|thumb|A bridge (sense 1)]]
