--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -29,7 +29,7 @@ From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
 * Hebrew: [[עלות]] ('alut) {{f}}
 {{trans-mid}}
 * Italian: {{t+|it|costo|m}}, {{t+|it|spesa|f}}
-* Japanese: [[費用]] ([[ひよう]], hiyō)
+* Japanese: {{t|ja|費用|tr=[[ひよう]], hiyō|sc=Jpan}}
 * Kurdish: {{KUchar|[[به‌ها]]}}, {{KUchar|[[نرخ]]}}
 * [[Novial]]: [[kosto]]
 * Portuguese: {{t+|pt|custo|m}}
@@ -42,8 +42,9 @@ From {{OF.}} ''[[coster]]'' (modern: ''[[coût]]'').
 *: Mandarin: {{zh-ts|代價|代价}} ([[dài]][[jìa]])
 * Finnish: {{t+|fi|hinta}}
 * German: {{t+|de|Verlust|m}}, {{t+|de|Ausgaben|f}}
-{{trans-mid}}
 * Greek: {{t+|el|κόστος|n|tr=kóstos|sc=Grek}}
+{{trans-mid}}
+* Japanese: {{t|ja|代償|tr=[[だいしょう]], daishō|sc=Jpan}}
 * [[Novial]]: [[kosto]]
 * Spanish: {{t+|es|costo|m}}
 * Swedish: {{t+|sv|kostnad|c}}
