--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -41,7 +41,6 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * Danish: [[finde]], [[træffe]]
 * Dutch: {{t+|nl|vinden}}, {{t+|nl|aantreffen}}
 * Esperanto: {{t+|eo|trovi|xs=Esperanto}}
-* Estonian: {{t|et|tuvastama}}
 * Finnish: {{t+|fi|löytää}}
 * French: {{t+|fr|trouver}}
 * German: {{t+|de|finden}}
@@ -93,6 +92,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 * Danish: [[dømme]]
 * Dutch: {{t+|nl|achten}}
 * Esperanto: [[juĝi]]
+* Estonian: {{t|et|leidma}}
 * Japanese: [[評決]]する (ひょうけつする, hyōketsu-suru)
 {{trans-mid}}
 * Norwegian: [[finne]]
