/* Translations */ {{trans-see}} <pen#4947539>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -39,9 +39,7 @@ Origin uncertain, perhaps related to ''[[pin]]''.
 * Spanish: {{t+|es|celda|f}}
 {{trans-bottom}}
 
-{{trans-top|(baseball) bullpen}}
-: ''see translations at'' '''[[bullpen]]'''.
-{{trans-bottom}}
+{{trans-see|(baseball) bullpen|bullpen}}
 
 ====Verb====
 {{en-verb|pens|penning|'''[[penned]]''' or '''[[pent]]'''}}
