/* Translations */ adding pt <cut#4948773>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -231,6 +231,7 @@ from {{Ger.}} *{{term||kut-}} , or from {{OF.}} {{term||couteau|knife}}
 * Hebrew: [[לחתוך]] (lakhtokh) (''transitive - to cut something intentionally''); [[להיחתך]] (lehikhatekh) (''intransitive - to be cut unintentionally'')
 {{trans-mid}}
 * Italian: {{t+|it|tagliare}}
+* Portuguese: {{t+|pt|cortar}}
 * Spanish: {{t+|es|cortar}}
 * Swedish: {{t+|sv|skära}}
 {{trans-bottom}}
@@ -240,9 +241,10 @@ from {{Ger.}} *{{term||kut-}} , or from {{OF.}} {{term||couteau|knife}}
 * Finnish: {{t+|fi|leikata}}
 * German: {{t+|de|schneiden}}
 * Hebrew: [[לחתוך]] (lakhtokh)
-{{trans-mid}}
 * Irish: {{t-|ga|bain|xs=Irish}} {{i|grass, hay, etc.}}
+{{trans-mid}}
 * Italian: {{t+|it|tagliare}}
+* Portuguese: {{t+|pt|cortar}}
 * Spanish: {{t+|es|cortar}}
 * Swedish: [[skära]] (''with knife''), [[klippa]] (''with scissors'')
 {{trans-bottom}}
@@ -252,6 +254,7 @@ from {{Ger.}} *{{term||kut-}} , or from {{OF.}} {{term||couteau|knife}}
 * Finnish: {{t+|fi|leikata}}
 * German: {{t+|de|trennen}}
 {{trans-mid}}
+* Portuguese: {{t+|pt|remover}}, {{t+|pt|retirar}}
 * Spanish: {{t-|es|retirar}}
 * Swedish: [[utesluta]] (''from a team''), [[klippa bort]] (''remove a portion during editing of a tape'')
 {{trans-bottom}}
@@ -259,6 +262,7 @@ from {{Ger.}} *{{term||kut-}} , or from {{OF.}} {{term||couteau|knife}}
 {{trans-top|to enter a queue in a wrong place}}
 * Danish: [[snyde]]
 * Finnish: {{t-|fi|etuilla}}
+* Portuguese: {{t+|pt|furar}}
 {{trans-mid}}
 * Spanish: {{t+|es|colar}}
 * Swedish: [[tränga]] sig
@@ -266,16 +270,18 @@ from {{Ger.}} *{{term||kut-}} , or from {{OF.}} {{term||couteau|knife}}
 
 {{trans-top|to cease recording}}
 * German: {{t+|de|klappe}}
-* Spanish: {{t+|es|cortar}}
+* Portuguese: {{t+|pt|cortar}}
 {{trans-mid}}
+* Spanish: {{t+|es|cortar}}
 * Swedish: {{t+|sv|klippa}}
 {{trans-bottom}}
 
 {{trans-top|to reduce}}
 * Danish: [[skære]], [[beskære]], [[nedsætte]]
 * Finnish: {{t+|fi|leikata}}
-{{trans-mid}}
 * German: {{t-|de|beschneiden}}
+{{trans-mid}}
+* Portuguese: {{t+|pt|diminuir}}
 * Spanish: {{t-|es|recortar}}
 {{trans-bottom}}
 
@@ -289,8 +295,9 @@ from {{Ger.}} *{{term||kut-}} , or from {{OF.}} {{term||couteau|knife}}
 {{trans-top|to intersect dividing into half}}
 * Danish: [[skære]], [[krydse]]
 * Finnish: [[jakaa]] ([[kahtia]])
-{{trans-mid}}
 * German: {{t+|de|schneiden}}, {{t+|de|trennen}}
+{{trans-mid}}
+* Portuguese: {{t+|pt|atravessar}}
 * Spanish: {{t-|es|atravesar}}
 {{trans-bottom}}
 
@@ -303,8 +310,9 @@ from {{Ger.}} *{{term||kut-}} , or from {{OF.}} {{term||couteau|knife}}
 <!-- Only colloquial expressions here, please!  -->
 * Danish: [[pjække]] fra
 * Finnish: {{t+|fi|lintsata}}
-{{trans-mid}}
 * Hebrew: [[להבריז]] (lehavryz)
+{{trans-mid}}
+* Portuguese: {{t+|pt|matar}}, {{t+|pt|faltar}}
 * Spanish: {{t+|es|faltar}}
 {{trans-bottom}}
 
@@ -316,6 +324,7 @@ from {{Ger.}} *{{term||kut-}} , or from {{OF.}} {{term||couteau|knife}}
 
 {{trans-top|to divide a pack of playing cards}}
 * German: {{t+|de|schneiden}}
+* Portuguese: {{t+|pt|cortar}}
 {{trans-mid}}
 * Italian: {{t+|it|alzare}}
 {{trans-bottom}}
@@ -334,7 +343,6 @@ from {{Ger.}} *{{term||kut-}} , or from {{OF.}} {{term||couteau|knife}}
 * {{ttbc|Indonesian}}: [[potong]], [[kerat]], [[iris]], [[memotong]]
 * {{ttbc|Jalnguy}}: [[jalnggan]], [[bubaman]]
 * {{ttbc|Japanese}}: [[切る]] ([[きる]], kiru)
-* {{ttbc|Portuguese}}: cortar
 * {{ttbc|Romanian}}: [[tăia]], [[croi]]
 * {{ttbc|Serbian}}: [[iseći]] (1,2,3,7,8), [[rez]] (5), [[spustiti]] (6), [[sniziti]] (6), [[pobeći]] (10)
 * {{ttbc|Telugu}}: [[కోయు]] (kOyu) (1,2), [[తెంచు]] (teMchu)(3), [[కోత వేయు]] (kOta vEyu) (6), [[ఖండించుకొను]] (khaMDiMchukonu) (8)
