--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -51,6 +51,7 @@ From {{etyl|la|en}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so
 * Latvian: [[un tā tālāk]], [[utt.]]
 * Lithuanian: [[ir taip toliau]] [[ir t.t.]]
 * Mandarin Chinese: [[等]] (deng)
+* Norwegian (Bokmål): [[og så videre]], {{t+|no|osv.}}
 * Polish: {{t+|pl|itd.}} [[i tak dalej]], {{t+|pl|itp.}} [[i tym podobne]]
 * Portuguese: {{t+|pt|et cetera}}
 * Russian: {{t-|ru|и так далее|sc=Cyrl}}, {{t-|ru|и т. д.|sc=Cyrl}}
