Sex 3gp <play#4958369>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -22,375 +22,4 @@ Old English ''[[pleġa]]'', ''plæġa''
 # An area of free movement for a part of a mechanism. such as the amount of [[slackness]] in a drive chain.
 #: ''No wonder the fanbelt is slipping: there’s too much '''play''' in it.''
 #: ''Too much '''play''' in a steering wheel may be dangerous.''
-# (''turn-based games'') An action carried out when it is one's turn to play.
-
-=====Synonyms=====
-'''literary composition'''
-* [[drama]]
-
-=====Translations=====
-{{trans-top|playful activity}}
-* Albanian: [[lojë]] {{f}}
-* Arabic: {{t+|ar|لعبة|f|sc=Arab}}
-* [[Catalan]]: [[joc]] {{m}}
-* Croatian: {{t+|hr|igra|f}}
-* Czech: {{t+|cs|hra|f}}
-* Danish: [[leg]], [[spil]]
-* Dutch: {{t+|nl|spel}}
-* Esperanto: {{t-|eo|ludo|xs=Esperanto}}
-* [[Ewe]]: [[fefe]]
-* Finnish: {{t+|fi|leikki}}, {{t+|fi|peli}}
-* French: {{t+|fr|jeu|m}}
-* German: {{t+|de|Spiel|n}}
-* Hebrew: [[משחק]] (misḥāq) {{m}}, [[שעשוע]] (shāʿāshuʿā) {{m}}
-* Hungarian: {{t+|hu|játék}}
-* Italian: {{t+|it|gioco|m}}
-{{trans-mid}}
-* Kurdish:
-*: Kurmanji: {{t+|ku|yarî|f}}, {{t+|ku|lîstik|f}}
-*: Sorani: {{t|ku|یاری|tr=yarî|sc=KUchar}}, {{t|ku|وازی|tr=wazí|sc=KUchar}}
-* Latin: {{t-|la|ludus|m}}
-* [[Malayalam]]: [[കളി]] (kaLi)
-* Norwegian: {{t+|no|spill}}
-* Polish: {{t+|pl|zabawa|f}}
-* Portuguese: {{t+|pt|jogo|m}}
-* Romanian: {{t+|ro|joc|m|f}}
-* Russian: {{t+|ru|игра|f|tr=igrá|sc=Cyrl}}
-* Slovak: {{t-|sk|hra|f}}
-* Slovene: {{t+|sl|igra|f}}
-* Spanish: {{t+|es|juego|m}}
-* Swedish: {{t+|sv|spel}}
-{{trans-bottom}}
-
-{{trans-top|literary composition}}
-* Finnish: {{t+|fi|näytelmä}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|theatrical performance}}
-* Arabic: {{Arab|[[مسرح]]}} (másraħ) {{m}}, {{Arab|[[مسرحية]]}} {{IPAchar|(masraħíyya)}} {{f}}
-* [[Catalan]]: [[obra]] {{f}}
-* Chinese: [[戲劇]], [[戏剧]] (xìjù), [[话剧]] (huàjù)
-* Czech: {{t+|cs|hra|f}}
-* Danish: [[stykke]], [[spil]]
-* Dutch: {{t+|nl|optreden|n}}, {{t+|nl|schouwspel|n}}, {{t+|nl|toneelstuk|n}}, {{t+|nl|stuk|n}}
-* [[Ewe]]: [[fefe]]
-* Finnish: {{t+|fi|näytelmä}}
-* French: {{t+|fr|pièce|f}}
-* German: {{t+|de|Schauspiel|n}}
-* Hebrew: {{t+|he|משחק|m|tr=misḥāq|sc=Hebr}}
-* Hungarian: {{t+|hu|darab}}, {{t+|hu|színdarab}}
-* Italian: {{t+|it|dramma|m}}
-{{trans-mid}}
-* Japanese: [[演劇]] (えんげき, engeki)
-* Korean: [[연극]] (yeon-geuk)
-* Kurdish: {{t+|ku|şano|f}}, {{t+|ku|piyes|f}}, {{t+|ku|tiyatro|f}}
-* [[Malayalam]]: [[നാടകം]] (naatakam)
-* Polish: {{t+|pl|sztuka|f}}
-* Portuguese: [[peça]] [[teatral]] {{f}}
-* Russian: {{t+|ru|пьеса|f|tr=p’jésa|sc=Cyrl}}, {{t|ru|спектакль|m|tr=spektákl’|sc=Cyrl}}
-* Slovak: {{t-|sk|hra|f}}
-* Slovene: {{t+|sl|igra|f}}
-* Spanish: [[obra]] [[teatral]] {{f}}
-* Swedish: {{t+|sv|pjäs|c}}
-* [[Telugu]]: [[నాటకం]] (naaTakaM)
-{{trans-bottom}}
-
-{{trans-top|individual's performance in a sport}}
-* Dutch: [[spelbeweging]] {{f}}
-* Finnish: {{t+|fi|peli}}
-* Hebrew: {{t+|he|משחק|m|tr=misḥāq|sc=Hebr}}
-* Kurdish: [[yarî]] {{f}}, [[lîstik]] {{f}}
-{{trans-mid}}
-* Polish: {{t+|pl|gra|f}}
-* Slovene: {{t+|sl|igra|f}}
-* Swedish: {{t+|sv|spel|c}}
-{{trans-bottom}}
-
-{{trans-top|major move by a business}}
-* Finnish: {{t-|fi|siirto}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|geological formation}}
-* Finnish: {{t+|fi|kenttä}}, {{t|fi|esiintymä}}
-{{trans-mid}}
-{{trans-bottom}}
-
-{{trans-top|area of free movement for a part of a mechanism}}
-* Finnish: {{t|fi|välys}}, {{t|fi|klappi}}, {{t+|fi|löysä}}
-* Hungarian: [[holtjáték]]
-{{trans-mid}}
-* Spanish: {{t+|es|juego|m}}
-{{trans-bottom}}
-
-{{trans-top|action carried out when it is one's turn to play}}
-* Finnish: {{t-|fi|siirto}}, {{t+|fi|peli}}
-{{trans-mid}}
-{{trans-bottom}}
-
-===Etymology 2===
-{{etyl|ang}} {{term|plegian|pleġian|lang=ang}}.
-
-====Verb====
-{{en-verb}}
-
-# {{intransitive}}: To act in a manner such that one has [[fun]]; to engage in activities expressly for the purpose of [[recreation]].
-#* '''2001''' February, Annabelle Sabloff, ''Reordering the Natural World'', page 83, University of Toronto Press
-#*: A youngster''...''listed some of the things his pet did not do<!--''...''-->: ''...''go on vacation, '''play''' in the same way that he did with his friends, and so on.
-#* '''2003''' November, Anne-Nelly Perret-Clermont et al. (''editors''), ''Joining Society: Social Interaction and Learning in Adolescence and Youth'', page 52, Cambridge University
-#*: We had to play <!--[drums]--> for an hour, so that meant that we didn't have time to '''play''' and joke around.
-# {{intransitive}}: To produce music using a musical instrument.
-#:* I've practiced the piano off and on, and I still can't '''play''' very well.
-# {{intransitive}}: To deal with a situation in a diplomatic manner.
-# {{transitive}}: To act in a performance as the indicated role.
-#:* He '''plays''' the King, and she's the Queen.
-# {{transitive}}: To participate in the game indicated.
-#:* '''play''' football, '''play''' sports
-#:* '''play''' cards, '''play''' poker
-#:* '''play''' cat and mouse, '''play''' games
-#:* '''play''' house, '''play''' doctor
-# {{transitive}} {{ergative}}: To produce music on the indicated musical instrument.
-#:* I'll '''play''' the piano and you sing.
-#:* Can you '''play''' an instrument?
-# {{transitive}} {{ergative}}: To produce music, the indicated song or style, with a musical instrument.
-#:* We especially like to '''play''' jazz together.
-#:* '''Play''' a song for me.
-#:* Do you know how to '''play''' Für Elise?
-#:* My son thinks he can '''play''' music.
-# {{transitive}} {{ergative}}: To use a device to watch or listen to the indicated recording.
-#:* You can '''play''' the DVD now.
-
-=====Translations=====
-{{trans-top|act in a manner such that one has fun}}
-* [[Aleut]]: [[mikal]]
-* Arabic: {{Arab|[[لعب]]}} {{IPAchar|(láʕiba)}}
-* [[Catalan]]: [[jugar]]
-* Chinese: [[玩]] (wán)
-* Czech: [[hrát]] si
-* Dutch: {{t+|nl|spelen}}
-* Esperanto: {{t-|eo|ludi|xs=Esperanto}}
-* Finnish: {{t+|fi|leikkiä}}
-* French: {{t+|fr|jouer}}
-* German: {{t+|de|spielen}}
-* Hebrew: [[לשחק]] (l'sāḥeq), [[להשתעשע]] (l'hishtāʿāsheʿā)
-* Hungarian: {{t+|hu|játszik}}
-* Icelandic: {{t+|is|leika}}, {{t+|is|leika sér}}
-* Italian: {{t+|it|giocare}}
-* Japanese: [[遊ぶ]] (asobu)
-{{trans-mid}}
-* Korean: [[놀다]] (nolda)
-* Kurdish:
-*: Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=KUchar}}
-* Latin: [[lūdere]]
-* Old English: {{t-|ang|lacan|alt=lācan|xs=Old English}}
-* [[Pashto]]: {{PSchar|[[لوبې کول]]}}, {{PSchar|[[لوبېدل]]}}, {{PSchar|[[غږول]]}}
-* Polish: [[bawić]] (się)
-* Portuguese: {{t+|pt|jogar}}
-* Romanian: {{t+|ro|juca}}
-* Russian: {{t+|ru|играть|tr=igrát’|sc=Cyrl}} {{impf}}
-* Slovak: [[hrať sa]]
-* Slovene: {{t+|sl|igrati se}}
-* Spanish: {{t+|es|jugar}}
-* Swedish: {{t+|sv|leka}}
-* [[Telugu]]: [[ఆడు]] (aaDu)
-{{trans-bottom}}
-
-{{trans-top|produce music using a musical instrument ([[transitive]] sense), affecting a noun}}
-* Arabic: {{Arab|[[لعب]]}} {{IPAchar|(láʕiba)}}
-* [[Catalan]]: [[tocar]]
-* Chinese:
-** [[彈]], [[弹]] (dàn) (string instruments including piano)
-** [[吹]] (chuī) (wind instruments)
-** [[敲打]] (qiāodǎ) (percussion instruments)
-** [[演奏]] (yǎnzòu) (any instrument)
-* Czech: {{t+|cs|hrát}}
-* Dutch: {{t+|nl|spelen}}
-* Finnish: {{t+|fi|soittaa}}
-{{trans-mid}}
-* French: [[jouer]] de
-* Hebrew: [[לנגן]] ב- (l'nāgen b'-)
-* Icelandic: [[spila]], [[spila á]] (+ {{dat}})
-* Italian: {{t+|it|suonare}}
-* Old English: {{t-|ang|lacan|alt=lācan|xs=Old English}}
-* Polish: [[grać]] na
-* Portuguese: {{t+|pt|tocar}}
-* Russian: {{t+|ru|играть|tr=igrát’|sc=Cyrl}} {{impf}}
-* Slovene: {{t+|sl|igrati}}
-* Swedish: {{t+|sv|spela}}
-{{trans-bottom}}
-
-{{trans-top|produce music using a musical instrument ([[intransitive]] sense, not affecting a noun)}}
-* Arabic: {{Arab|[[لعب]]}} {{IPAchar|(láʕiba)}}
-* [[Catalan]]: [[tocar]]
-* Czech: {{t+|cs|hrát}}
-* Dutch: {{t+|nl|spelen}}
-* Finnish: {{t+|fi|soittaa}}
-* French: {{t+|fr|jouer}}
-* German: {{t+|de|spielen}}
-* Hebrew: [[לנגן]] (l'nāgen)
-* Icelandic: {{t-|is|spila}}
-* Japanese: [[演奏]]する (ensō suru)
-{{trans-mid}}
-* Kurdish:
-*: Sorani: {{t|ku|مۆسیقا لێدان|tr=mósíqa lédan|sc=KUchar}}
-* Old English: {{t-|ang|lacan|alt=lācan|xs=Old English}}
-* Polish: {{t+|pl|grać}}
-* Portuguese: {{t+|pt|tocar}}
-* Russian: {{t+|ru|играть|tr=igrát’|sc=Cyrl}} {{impf}}
-* Slovene: {{t+|sl|igrati}}
-* Spanish: {{t+|es|tocar}}
-* Swedish: {{t+|sv|spela}}
-{{trans-bottom}}
-
-{{trans-top|deal with a situation in a diplomatic manner}}
-* Finnish: {{t+|fi|hoitaa}}
-* Icelandic: {{t-|is|spila}}
-{{trans-mid}}
-* Polish: {{t+|pl|grać}}
-{{trans-bottom}}
-
-{{trans-top|act in a performance}}
-* [[Catalan]]: [[actuar]]
-* Chinese: [[表演]] (biǎoyǎn)
-* Czech: {{t+|cs|hrát}}
-* Dutch: {{t+|nl|optreden}}
-* Finnish: {{t-|fi|näytellä}}
-* German: {{t+|de|spielen}}
-* Hebrew: [[לשחק]] (l'sāḥeq)
-{{trans-mid}}
-* Icelandic: {{t+|is|leika}}
-* Korean: [[연기를 하다]] (yeon-gireul hada)
-* Polish: {{t+|pl|grać}}, {{t+|pl|występować}}
-* Portuguese: {{t+|pt|atuar}}, {{t+|pt|representar}}
-* Russian: {{t+|ru|играть|tr=igrát’|sc=Cyrl}} {{impf}}
-* Slovene: {{t+|sl|igrati}}
-* Swedish: [[agera]], [[spela]] en roll
-{{trans-bottom}}
-
-{{trans-top|participate in (a game)}}
-* Arabic: {{Arab|[[لَعِبَ]]}} (laʕiba)
-* [[Catalan]]: participar, jugar
-* Chinese: [[玩]] (wán)
-* Czech: {{t+|cs|hrát}}
-* Dutch: [[spelen]], [[meespelen]]
-* Finnish: {{t+|fi|pelata}}
-* French: [[jouer]] à
-* Icelandic: {{t-|is|spila}}, {{t+|is|leika}}
-{{trans-mid}}
-* Kurdish:
-*: Sorani: {{t|ku|یاری کردن|tr=yarí kirdin|sc=KUchar}}
-* Polish: [[grać]] w
-* Portuguese: {{t+|pt|jogar}}
-* Russian: {{t+|ru|играть|tr=igrát’|sc=Cyrl}} {{impf}}
-* Slovene: {{t+|sl|igrati}}
-* Spanish: [[jugar]] a
-* Swedish: {{t+|sv|spela}}
-{{trans-bottom}}
-
-{{trans-top|use a device to hear (a recording)}}
-* Chinese: [[放]] (fàng)
-* Czech: {{t+|cs|hrát}}
-* Dutch: [[spelen]], [[afspelen]]
-* Finnish: {{t+|fi|soittaa}}
-* French: {{t+|fr|jouer}}
-* Hebrew: [[להשמיע]] (l'hāshmiʿā)
-* Icelandic: {{t-|is|spila}}
-{{trans-mid}}
-* Kurdish:
-*: Sorani: {{t|ku|لێدان|tr=lédan|sc=KUchar}}
-* Polish: [[grać]], [[odtwarzać]]
-* Portuguese: {{t+|pt|gravar}}
-* Slovene: [[predvajati]]
-* Swedish: {{t+|sv|spela}}, {{t+|sv|spela upp}}
-{{trans-bottom}}
-
-{{checktrans-top}}
-* {{ttbc|Arabic}}: (5) {{Arab|[[يعزف]]}} (6), {{Arab|[[يتمرن]]}}
-* {{ttbc|Arabic}}: {{Arab|[[يلعب]]}}
-* {{ttbc|Guaraní}}: [[ñembosarái]]
-* {{ttbc|Ido}}: [[ludar]] (1), [[plear]] (2, 4)
-* {{ttbc|Interlingua}}: [[jocar]]
-* {{ttbc|Irish}}: [[súgradh]] (''verbal noun'')
-* {{ttbc|Tupinambá}}: [[nhemosaraîa]]
-{{trans-bottom}}
-
-===Derived terms===
-{{top2}}
-* [[airplay]]
-* [[downplay]]
-* [[fair play]]
-* [[playact]]
-* [[play along]]
-* [[play around]]
-* [[play ball]]
-* [[playbill]]
-* [[playboy]]
-* [[play by ear]]
-* [[play by play]], [[play-by-play]]
-* [[play date]], [[playdate]]
-* [[play dead]]
-* [[play doctor]]
-* [[playdough]]
-* [[play down]]
-* [[player]]
-* [[playful]]
-* [[play games]]
-* [[playground]]
-* [[play house]]
-{{mid2}}
-* [[play lunch]]
-* [[playmate]]
-* [[play money]]
-* [[playoff]]
-* [[playout]]
-* [[playpen]]
-* [[playroom]]
-* [[playschool]]
-* [[play the field]]
-* [[plaything]]
-* [[playtime]]
-* [[play to the gallery]]
-* [[play up]]
-* [[playwright]]
-* [[power play]]
-* [[radio play]]
-* [[roleplay]]
-* [[screen play]]
-* [[two can play that game]]
-* [[war play]]
-* [[word play]]
-{{bottom}}
-
-[[Category:1000 English basic words]]
-[[Category:English ergative verbs]]
-
-[[ang:play]]
-[[ar:play]]
-[[de:play]]
-[[et:play]]
-[[el:play]]
-[[es:play]]
-[[fa:play]]
-[[fr:play]]
-[[io:play]]
-[[id:play]]
-[[it:play]]
-[[kk:play]]
-[[ku:play]]
-[[lo:play]]
-[[hu:play]]
-[[nl:play]]
-[[ja:play]]
-[[pl:play]]
-[[pt:play]]
-[[ru:play]]
-[[simple:play]]
-[[fi:play]]
-[[sv:play]]
-[[ta:play]]
-[[te:play]]
-[[vi:play]]
-[[tr:play]]
-[[uk:play]]
-[[zh:play]]
+# (''turn-based game
