--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -32,6 +32,7 @@ From {{etyl|la|en}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so
 ====Translations====
 {{trans-top|and so on}}
 * Bulgarian: [[и така нататък]], [[и т.н.]]
+* Chinese: [[等]] (děng)
 * Czech: [[a tak dále]], [[atd.]]
 * Danish: [[og så videre]], {{t+|da|osv.}}
 * Dutch: {{t+|nl|enzovoort}}, {{t+|nl|enz.}}, {{t+|nl|enzovoorts}}
@@ -42,15 +43,14 @@ From {{etyl|la|en}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so
 * German: {{t+|de|und so weiter}}, {{t+|de|usw.}}, {{t+|de|etc.}}, {{t-|de|et cetera}}
 * Hebrew: [[וכדומה]]
 * Hungarian: [[satöbbi]], [[stb.]], [[(é)s a többi]]
-* Icelandic: [[og svo framvegis]] ('''[[o. s. frv.]]''')
+* Icelandic: [[og svo framvegis]], [[o. s. frv.]]
 * Italian: {{t+|it|eccetera}}
-* Japanese: [[など]] (nado), [[等]] (とう, tou)
+* Japanese: [[など]] (nado), [[等]] (とう, tō)
 * Korean: {{ko-inline|기타|gita}}
 {{trans-mid}}
 * Latin: {{t+|la|et cetera}}
 * Latvian: [[un tā tālāk]], [[utt.]]
-* Lithuanian: [[ir taip toliau]] [[ir t.t.]]
-* Mandarin Chinese: [[等]] (deng)
+* Lithuanian: [[ir taip toliau]], [[ir t.t.]]
 * Norwegian (Bokmål): [[og så videre]], {{t+|no|osv.}}
 * Polish: {{t+|pl|itd.}} [[i tak dalej]], {{t+|pl|itp.}} [[i tym podobne]]
 * Portuguese: {{t+|pt|et cetera}}
