--- a/en/偏/偏.11103.wikitext
+++ b/en/偏/偏.11103.wikitext
@@ -99,6 +99,12 @@
 * '''Compounds''':
 ** [[偏頭痛]], [[偏头痛]]
 
+----
+
+==Vietnamese==
+===Han character===
+'''偏''' ([[thiên]], [[xiên]], [[xen]])
+
 [[fr:偏]]
 [[ko:偏]]
 [[hu:偏]]
