--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -49,7 +49,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Danish: {{t-|da|slås}}, {{t-|da|kæmpe}}
 * Dutch: {{t+|nl|strijden}}, {{t+|nl|vechten}}
 * {{trreq|Esperanto}}
-* {{trreq|Estonian}}
+* Estonian: (''without weapons'') {{t|et|kaklema}}, (''with weapons'') {{t|et|võitlema}}
 * Finnish: (''without weapons'') {{t-|fi|tapella}}, (''with weapons'') {{t+|fi|taistella}}
 * French: {{t+|fr|se battre}}, {{t+|fr|combattre}}
 * Georgian: [[ბრძოლა]] (brdzola), [[შებრძოლება]] (šebrdzoleba)
