--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -220,6 +220,7 @@
 * French: {{t+|fr|quinte|f}}
 * Japanese: {{t|ja|ストレート|tr=sutorēto|sc=Jpan}}
 {{trans-mid}}
+* Polish: [[strit]] {{m}}
 * Russian: [[стрейт]] (strejt) {{m}}, [[стрит]] (strit) {{m}}
 * Swedish: {{t+|sv|stege|c}}
 {{trans-bottom}}
