--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -89,46 +89,11 @@
 * {{audio|Sv-blond.ogg|audio}}
 
 ===Adjective===
-'''blond'''
+{{infl|sv|adjective}}
+{{sv-adj-reg|n=blont}}
 
 # of light hair colour
 # of light complexion
-
-====Inflection====
-{| border=1 cellspacing=0
-|- bgcolor="#FFFFF0" align=center
-! rowspan=3 colspan=2 |
-! colspan=4 width=400 | Singular
-! rowspan=3 width=100 | Plural
-|- bgcolor="#FFFFF0" align=center
-! colspan=2 width=200 | Indefinite form
-! colspan=2 width=200 | Definite form
-|- bgcolor="#FFFFF0" align=center
-| width=100 | ''Common''
-| width=100 | ''Neuter''
-| width=100 | ''Natural masculine''
-| width=100 | ''Other''
-|- align=center
-| bgcolor="#FFFFF0" colspan=2 width=120 | ''Absolute''
-| [[blond]]
-| [[blont]]
-| [[blonde]]
-| [[blonda]]
-| [[blonda]]
-|- align=center
-| bgcolor="#FFFFF0" colspan=2 | {{compar}}
-| colspan=7 | [[blondare]]
-|- align=center
-| bgcolor="#FFFFF0" rowspan=2 width=60 | {{superl}}
-| bgcolor="#FFFFF0" width=60 | ''Attribute''
-| colspan=2 style="background:#eeeeee" |
-| [[blondaste]]
-| [[blondaste]]
-| [[blondaste]]
-|- align=center
-| bgcolor="#FFFFF0" width=60 | ''Predicative''
-| colspan=5 | [[blondast]]
-|}
 
 [[cs:blond]]
 [[da:blond]]
