--- a/en/p/polyedrous.7205.wikitext
+++ b/en/p/polyedrous.7205.wikitext
@@ -1,5 +1,5 @@
 ==English==
 
 ===Adjective===
-'''polyedrous'''
-#Variant of [[polyhedral]].
+{{en-adj|-}}
+#{{obsolete}} {{alternative spelling of|polyhedrous}}
