iwiki +ca, no <France#4976182>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -152,6 +152,7 @@ From the [[Francs]], a people.
 [[az:France]]
 [[zh-min-nan:France]]
 [[bg:France]]
+[[ca:France]]
 [[de:France]]
 [[et:France]]
 [[el:France]]
@@ -175,6 +176,7 @@ From the [[Francs]], a people.
 [[hu:France]]
 [[nl:France]]
 [[ja:France]]
+[[no:France]]
 [[oc:France]]
 [[nds:France]]
 [[pl:France]]
