--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -3,7 +3,7 @@
 {{rank|England|sense|ten|422|beautiful|possible|mark|followed}}
 
 ===Etymology===
-* From Cecilia.
+* From [[beauty]] and Germanic ''[[-ful]]'', "full of".
 
 ===Pronunciation===
 * {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|/ˈbjuːtɪfəl/}}, {{SAMPA|/"bju:tIf@l/}}
@@ -28,8 +28,6 @@
 * (''of the weather''): [[clear]], [[fine]], [[nice]], [[pleasant]], [[sunny]]
 * (''well executed''): [[excellent]], [[exceptional]], [[good]], [[great]], [[marvellous]]/[[marvelous]], [[perfect]], [[stylish]], [[wonderful]]
 * (''ironic: how unfortunate''): [[great]], [[marvellous]]/[[marvelous]], [[nice]], very nice, [[wonderful]] (''any of these can be prefixed with an [[intensifier]] such as'' [[bloody]], [[damned]] ''or'' [[just]])
-
-* So stunning that it hurts to look away, magnificent, myne if your reading thsi u think im dumb :]
 
 ====Antonyms====
 * (''possessing charm and attractive''): [[grotesque]], [[hideous]], [[homely]], [[plain]], [[misshapen]], [[repulsive]], [[ugly]]
