sorted/rebalanced translations <curve#4990352>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -93,6 +93,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 
 {{trans-top|algebraic curve}}
 : ''See'' '''[[algebraic curve#Translations|algebraic curve]]'''
+{{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|informal: usually in plural: attractive features of a woman}}
