/* Noun */ copyedited a bit <cut#4990574>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -88,8 +88,8 @@ from {{etyl|gem}} *{{term||kut-|lang=gem}} , or from {{etyl|fro}} {{term||coutea
 #: ''That’s our finest '''cut''' of meat.''
 # {{fencing}} An attack made with a chopping motion of the blade, landing with its edge or point.
 # A deliberate [[snub]], typically a refusal to return a [[bow]] or other acknowledgement of acquaintance.
-# A definable part, such as an individual song, of a recording, particularly of commercial records, tapes, CDs, etc.
-#: ''The drummer on the last '''cut''' of their CD is not identified."
+# A definable part, such as an individual [[song]], of a [[recording]], particularly of [[commercial]] records, [[audio]] [[tape]]s, [[CD]]s, etc.
+#: ''The drummer on the last '''cut''' of their CD is not identified.''
 
 ====Translations====
 {{trans-top|opening resulting from cutting}}
