--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -4,7 +4,7 @@
 {{rank|real|eye|sun|496|cut|everything|six|comes}}
 
 ===Etymology===
-from {{etyl|gem}} *{{term||kut-|lang=gem}} , or from {{etyl|fro}} {{term||couteau|knife|lang=fro}}
+from {{etyl|gem}} *{{term||kut-|lang=gem}} (Cf. Norwegian [[kutte]]), or from {{etyl|fro}} {{term||couteau|knife|lang=fro}}
 
 ===Pronunciation===
 * {{IPA|/kʌt/}}, {{SAMPA|/"kVt/}}
