iwiki +eu <pen#5000146>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -219,6 +219,7 @@ English transcriptions of Chinese speech often fail to distinguish between the c
 [[de:pen]]
 [[el:pen]]
 [[es:pen]]
+[[eu:pen]]
 [[fa:pen]]
 [[fr:pen]]
 [[ko:pen]]
