iwiki +simple <Yugoslavia#5001085>

--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -58,5 +58,6 @@ From {{SH.}} [[jug]]o (''south'') and '''slavija''' (''slavia'', the land of the
 [[hu:Yugoslavia]]
 [[pl:Yugoslavia]]
 [[pt:Yugoslavia]]
+[[simple:Yugoslavia]]
 [[fi:Yugoslavia]]
 [[tr:Yugoslavia]]
