Reverted edits by [[Special:Contributions/Magog the Ogre|Magog the Ogre]] ([[User_talk:Magog the Ogre|Talk]]); changed back to last version by [[User:LBV-Zivi|LBV-Zivi]] <plum#5003328>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -294,7 +294,7 @@
 {{trans-bottom}}
 
 ===Adverb===
-{{a|Appalachia}} {{en-adv|-}} 
+{{en-adv|-}}
 
 # [[completely|Completely]]; [[utterly]].
 #: ''You're going to think I'm '''plum''' crazy for this, but I want to adopt all seven kittens.''
