--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -66,7 +66,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 {{trans-mid}}
 * Kurdish:
 *: Sorani: {{t|ku|شه‌ڕ کردن|tr=shaR kirdin|sc=KUchar}}
-* {{trreq|Lao}}
+* Lao: {{t|lo|ຕໍ່ສູ້|tr=töö-suu|sc=Laoo}}, {{t|lo|ຮົບ|tr=hop|sc=Laoo}}
 * Latin: {{t-|la|pugnare}}
 * {{trreq|Latvian}}
 * {{trreq|Lithuanian}}
@@ -145,6 +145,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Icelandic: [[berjast]] [[gegn]]
 * Italian: [[lottare]] contro
 * Japanese: [[戦う]] / [[闘う]] ([[たたかう]], tatakau)
+* Lao: {{t|lo|ຕໍ່ສູ້|tr=töö-suu|sc=Laoo}}
 * Latin: {{t-|la|pugnare}}
 * Polish: {{t+|pl|walczyć}}
 * Portuguese: [[lutar]] contra, [[combater]], [[enfrentar]]
