/* Pronunciation */ add SAMPA, formatting <European#5006124>

--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Pronunciation===
-/ˌjʊəɹəˈpiːən/
+* {{IPA|/ˌjʊəɹ.əˈpiː.ən/}}, {{SAMPA|/%jU@r.@"pi:.@n/}}
 
 ===Adjective===
 {{en-adj}}
