--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -93,7 +93,7 @@
 
 ==Vietnamese==
 ===Han character===
-'''傘''' ([[tàn]], [[tán]], [[tản]])
+'''傘''' ([[tản]], [[tàn]], [[tán]])
 
 [[be:傘]]
 [[de:傘]]
