--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -5,7 +5,7 @@ From Old Norse ''[[skyrta]]'', from Germanic ''*skurtijon''.  Compare ''[[shirt]
 
 ===Pronunciation===
 * {{audio|en-us-skirt.ogg|Audio (US)}}
-*: Rhymes: [[Rhymes:English:-ɜː(r)t|-ɜː(r)t]]
+*: {{rhymes|ɜː(r)t}}
 
 ===Noun===
 {{en-noun}}
