--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -119,6 +119,7 @@ From {{OE.}} ''[[feohtan]]'', from {{proto|West-Germanic|fextanan}}. Cognate wit
 * Czech: {{t-|cs|bojovat}}
 * Danish: [[udkæmpe]]
 * Dutch: {{t+|nl|vechten}} {{t+|nl|tegen}}, vechten {{t+|nl|met}}
+* Estonian: {{t|et|sõdima}}
 * Greek: {{t+|el|πολεμώ|sc=Grek}} (polemó)
 * Hebrew: {{he-translation|נאבק|ne'evák}}, {{he-translation|נלחם|nilkhám}}
 * Icelandic: [[berjast]] [[við]]
