+rhymes template, template enPR/IPA/SAMPA <curtain#5023246>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -2,9 +2,9 @@
 ==English==
 
 ===Pronunciation===
-* kû(r)'tən, /ˈkɜː(r)tən/, /<tt>"k3:(r)t@n</tt>/
+* {{enPR|kû(r)'tən}}, {{IPA|/ˈkɜː(r)tən/}}, {{SAMPA|/"k3:(r)t@n/}}
 * {{audio|en-us-curtain.ogg|Audio (US)}}
-* :Rhymes: [[Rhymes:English:-ɜː(r)tən|-ɜː(r)tən]]
+* :{{rhymes|ɜː(r)tən}}
 
 ===Noun===
 {{en-noun}}
