--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -5,7 +5,7 @@
 * [[pyjamas]] (''Australia'',''UK'')
 
 ===Etymology===
-From the {{Pers.}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning ''leg garment'' via {{Urd.}}/{{Hind.}} [[पैजामा]].
+From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning ''leg garment'' via {{etyl|ur}}/{{etyl|hi}} {{term|पैजामा|sc=Deva}}.
 
 ===Pronunciation===
 * {{IPA|/pəˈdʒɑ.məz/}}
