--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -5,7 +5,7 @@
 ===Pronunciation===
 * {{audio|en-us-tortoise.ogg|Audio (US)}}
 
-*: Rhymes: [[Rhymes:English:-ɔː(r)təs|-ɔː(r)təs]]
+*: {{rhymes|ɔː(r)təs}}
 
 ===Noun===
 {{en-noun}}
