--- a/en/f/fought.6880.wikitext
+++ b/en/f/fought.6880.wikitext
@@ -1,16 +1,17 @@
 ==English==
 
 ===Pronunciation===
-*{{IPA|/'fɔʊt/}}
-*{{audio|en-us-fought.ogg|Audio (US)}}
-*Rhymes: [[Rhymes:English:-ɔːt|-ɔːt]]
+* {{IPA|/'fɔʊt/}}
+* {{audio|en-us-fought.ogg|Audio (US)}}
+* {{rhymes|ɔːt}}
 
 ===Verb===
 '''fought'''
+
 # {{past of|[[fight]]}}
 
-[[Category:English irregular simple past forms]]
 [[Category:English irregular past participles]]
+[[Category:English irregular simple past forms]]
 
 [[el:fought]]
 [[fr:fought]]
