iwiki +ko <secretary#5034890>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -107,6 +107,7 @@ From {{ML.}} ''[[secretarius]]'', one entrusted with [[secret]]s.
 [[et:secretary]]
 [[fr:secretary]]
 [[gl:secretary]]
+[[ko:secretary]]
 [[io:secretary]]
 [[id:secretary]]
 [[it:secretary]]
