--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -42,6 +42,7 @@
 * Portuguese: {{t+|pt|República Checa}}
 * Romanian: {{t-|ro|Republica Cehă|f}}
 * Russian: [[Чешская Республика]] {{f}}
+* Scottish Gaelic: [[an t-Seic]] ''f''
 * Serbian:
 *: Cyrillic: [[Чешка Република]] {{f}}
 *: Roman: [[Češka Republika]] {{f}}
