sorted/rebalanced translations, trans link [[American Sign Language]] <count#5046875>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -70,7 +70,7 @@ From {{OF.}} {{term|conter||add up; tell a story}}.
 
 =====Translations=====
 {{trans-top|to enumerate or determine number}}
-* American Sign Language: {{t|ase|F@BasePalm-PalmDown-FlatB@CenterChesthigh-PalmUp F@InFinger-PalmDown-FlatB@CenterChesthigh}}
+* [[American Sign Language]]: {{t|ase|F@BasePalm-PalmDown-FlatB@CenterChesthigh-PalmUp F@InFinger-PalmDown-FlatB@CenterChesthigh}}
 * [[Breton]]: [[kontañ]]
 * Czech: {{t+|cs|počítat}}
 * Danish: [[tælle]]
@@ -79,8 +79,8 @@ From {{OF.}} {{term|conter||add up; tell a story}}.
 * Finnish: {{t+|fi|laskea}}
 * French: [[compter]] (1,2)
 * German: {{t+|de|zählen}}
-* Italian: {{t+|it|contare}}
 {{trans-mid}}
+* Italian: {{t+|it|contare}}
 * Malay: {{t+|ms|kira|xs=Malay}}
 * Persian: [[شمردن]]
 * Polish: {{t+|pl|liczyć}}
