--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -26,6 +26,9 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 # {{transitive}} To [[determine]] or [[judge]].
 #: ''The jury '''finds''' for the defendant''
 
+====Antonyms====
+* [[lose]]
+
 ====Derived terms====
 ''See also'' '''[[finding]]''' ''and'' '''[[found]]'''
 * [[find fault]]
