--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -8,7 +8,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþan}}. Cog
 ===Pronunciation===
 * {{enPR|fīnd}}, {{IPA|/faɪnd/}}, {{SAMPA|/faInd/}}
 * {{audio|en-us-find.ogg|Audio (US)}}
-* Rhymes: [[Rhymes:English:-aɪnd|-aɪnd]]
+* {{rhymes|aɪnd}}
 
 ====Homophones====
 * [[fine]]d
