--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -2,6 +2,7 @@
 
 ===Etymology===
 Old English ''[[sūcan]]''
+Its vulgar meaning probably took origin from Sicilian slang ''suca''.
 
 ===Pronunciation===
 * {{audio|en-us-suck.ogg|Audio (US)}}
