rm /'s from enPR template, template -see +also <thunder#5051104>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -1,4 +1,4 @@
-{{see|thundër}}
+{{also|thundër}}
 ==English==
 
 ===Etymology===
@@ -6,7 +6,7 @@ From {{OE.}} {{term|þunor}}. Compare {{Pers.}} {{fa-Arab|[[تندر]]}} (tondar
 
 ===Pronunciation===
 * {{a|UK}}: {{IPA|/ˈθʌn.də/}}, {{SAMPA|/"TVnd@/}}
-* {{a|US}}: {{enPR|/thŭn'dər/}}, {{IPA|/ˈθʌn.dɚ/}}, {{SAMPA|/"TVnd@`/}}
+* {{a|US}}: {{enPR|thŭn'dər}}, {{IPA|/ˈθʌn.dɚ/}}, {{SAMPA|/"TVnd@`/}}
 * {{audio|en-us-thunder.ogg|Audio (US)}}
 *: {{rhymes|ʌndə(r)}}
 
@@ -111,7 +111,7 @@ From {{OE.}} {{term|þunor}}. Compare {{Pers.}} {{fa-Arab|[[تندر]]}} (tondar
 {{checktrans-bottom}}
 
 ====See also====
-*[[lightning]]
+* [[lightning]]
 
 ===Verb===
 {{en-verb}}
