--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -1,4 +1,4 @@
-{{see|LIBRE}}
+{{also|LIBRE}}
 ==English==
 
 ===Etymology===
@@ -25,9 +25,8 @@ From {{etyl|es}} and {{etyl|fr}} {{term|libre||[[freedom]], [[liberty]]|lang=es}
 From {{L.|fr}} {{term|liber|lang=la}}
 
 ===Pronunciation===
-*{{audio|Fr-libre.ogg|audio}}
-* {{IPA|/libʀ/}}
-* [[w:SAMPA|SAMPA]]: /libR/
+* {{audio|Fr-libre.ogg|audio}}
+* {{IPA|/libʀ/|lang=fr}}, {{SAMPA|/libR/}}
 
 ===Adjective===
 {{fr-infl-adj|sm=libre|sf=libre|pm=libres|pf=libres|smp=libʁ|sfp=libʁ|pmp=libʁ|pfp=libʁ}}
@@ -41,18 +40,22 @@ From {{L.|fr}} {{term|liber|lang=la}}
 #: ''temps '''libre''''' — free time
 
 [[Category:French adjectives]]
+
 ----
 
 ==Occitan==
 
 ===Etymology===
 From Latin ''liber''.
+
 ===Pronunciation===
-* {{IPA|['liβɾe]}}
+* {{IPA|['liβɾe]|lang=oc}}
+
 ===Noun===
 {{oc-noun-m}}
 
 # [[book]]
+
 ----
 
 ==Spanish==
@@ -61,14 +64,14 @@ From Latin ''liber''.
 From {{L.|es}} {{term|liber|lang=la}}
 
 ===Pronunciation===
-{{IPA|/ˈliβɾe/}}
+* {{IPA|/ˈliβɾe/|lang=es}}
 
 ===Adjective===
 {{es-adj|f=libre}}
 
 # [[free]], [[clear]], at liberty
 
-===Derived terms===
+====Derived terms====
 * [[libérrimo]]
 
 [[de:libre]]
