iwiki +es, no <came#5052746>

--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -33,6 +33,7 @@
 
 [[de:came]]
 [[el:came]]
+[[es:came]]
 [[fa:came]]
 [[fr:came]]
 [[ko:came]]
@@ -42,6 +43,7 @@
 [[ku:came]]
 [[hu:came]]
 [[ja:came]]
+[[no:came]]
 [[pt:came]]
 [[ru:came]]
 [[simple:came]]
