/* Etymology */ {{etyl}}, {{term}} <libre#5053201>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -46,7 +46,7 @@ From {{L.|fr}} {{term|liber|lang=la}}
 ==Occitan==
 
 ===Etymology===
-From Latin ''liber''.
+From {{etyl|la|oc}} {{term|liber|lang=la}}
 
 ===Pronunciation===
 * {{IPA|['liβɾe]|lang=oc}}
