--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -1,62 +1,64 @@
 {{see also|eg|ég|.eg|eg.|EG|Eg|-eg-|eg-}}
-
 ==English==
 
 ===Alternative spellings===
-*[[eg.]], [[eg]], [[ex. gr.]]
+* [[eg.]]
+* [[eg]]
+* [[ex. gr.]]
 
 ===Etymology===
-Abbreviation of Latin {{term|exempli gratia|exempli gratiā|lang=la|for example}}. ''Gratiā'' here is in the ablative case. Previously abbreviated to ''ex. gr.''
+Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for example}}. ''Gratiā'' here is in the ablative case. Previously abbreviated to ''ex. gr.''
 
 ===Adverb===
 {{en-adv|-}}
-#{{context|[[abbreviation]]|[[initialism]]}} Literally, "for example."  Used to introduce an [[example]] or list of examples to illustrate what is being discussed.
-#:''Asia is a large continent, with many large nations ('''e.g.''', China, India, and Japan).''
+
+# {{context|[[abbreviation]]|[[initialism]]}} Literally, “for example”.  Used to introduce an [[example]] or list of examples to [[illustrate]] what is being [[discuss]]ed.
+#: ''Asia is a large continent, with many large nations ('''e.g.''', China, India, and Japan).''
 
 ====Usage notes====
 {{unreferenced}}
-*The list of examples following ''e.g.'' should not be exhaustive (in that case, ''[[i.e.]]'' should be used) and should not be followed by ''[[et cetera]]'' or ''[[etc.]]''  
-*Place ''e.g.'' between [[parentheses]] when used in written text and follow by a [[comma]] when used in its function as "for example."
-*Opinion is mixed about whether this term should be italicized and whether it should be written with a separating non-breaking space as in ''e. g.''
+* The list of examples following ''e.g.'' should not be exhaustive (in that case, ''[[i.e.]]'' should be used) and should not be followed by ''[[et cetera]]'' or ''[[etc.]]''  
+* Place ''e.g.'' between [[parentheses]] when used in written text and follow by a [[comma]] when used in its function as “for example”.
+* Opinion is mixed about whether this term should be italicized and whether it should be written with a separating non-breaking space as in ''e. g.''
 
 ====Translations====
-{{top}}
+{{trans-top|abbreviation for “for example”}}
 *Arabic: [[على سبيل المثال]]
-*Bosnian: [[npr.#Bosnian|npr.]] (''[[na]] [[primjer]]'')
+*Bosnian: {{t|bs|npr.}} {{i|[[na]] [[primjer]]}}
 *Chinese: [[例如]] (li4 ru2)
-*Danish: [[f.eks.]], [[fx][fx_(Danish)]] (''[[for eksempel]]'')
-*Dutch: [[bv.]], [[bijv.]], [[bvb.]] (''[[bijvoorbeeld]]'')
-*Esperanto: [[ekz.]] (''[[ekzemple]]'')
-*Finnish: [[esim.]] (''[[esimerkiksi]]'')
-*Faroese: [[t.d.]] (''[[til dømis]]'')
-*French: [[par ex.]], [[p. ex.]] (''[[par exemple]]'')<!-- are both right? -->
-*German: [[z. B.]] (''[[zum Beispiel]]'')
-*Greek: [[π.χ.]] (''[[παραδείγματος χάριν]]'')
-*Hebrew (לדוגמא)
-*Hungarian: [[pl.]] (''[[például]]'')
-*Icelandic: [[t.d.]] ([[til dæmis]])
-*Italian: [[ad es.]] (''[[ad esempio]]'')
+*Danish: [[f.eks.]], {{t|da|fx}} {{i|[[for eksempel]]}}
+*Dutch: {{t|nl|bv.}}, {{t|nl|bijv.}}, {{t|nl|bvb.}} {{i|{{t|nl|bijvoorbeeld}}}}
+*Esperanto: [[ekz.]] {{i|[[ekzemple]]}}
+*Finnish: [[esim.]] {{i|[[esimerkiksi]]}}
+*Faroese: [[t.d.]] {{i|[[til dømis]]}}
+*French: [[par ex.]], [[p. ex.]] {{i|[[par exemple]]}}<!-- are both right? -->
+*German: [[z. B.]] {{i|[[zum Beispiel]]}}
+*Greek: [[π.χ.]] {{i|[[παραδείγματος χάριν]]}}
+*{{ttbc|Hebrew}}: {{i|{{t|he|לדוגמא}}}}
+*Hungarian: [[pl.]] {{i|[[például]]}}
+*Icelandic: [[t.d.]] {{i|[[til dæmis]]}}
+*Italian: [[ad es.]] {{i|[[ad esempio]]}}
 *Japanese: [[例]] (rei)
 *Korean: [[예]] (ye)
-*Latvian: [[piem.]] ([[piemēram]])
-{{mid}}
-*Lithuanian: [[pvz.]] ([[pavyzdžiui]])
-*Norwegian: [[f.eks.]] ([[for eksempel]])
+*Latvian: [[piem.]] {{i|[[piemēram]]}}
+{{trans-mid}}
+*Lithuanian: [[pvz.]] {{i|[[pavyzdžiui]]}}
+*Norwegian: [[f.eks.]] {{i|[[for eksempel]]}}
 *Persian: [[براي مثال]]
 *Portuguese: [[por exemplo]]
-*Polish: [[np.]] (''[[na]] [[przykład]]'')
+*Polish: [[np.]] {{i|[[na]] [[przykład]]}}
 *Romanian: [[de exemplu]]
-*Russian: [[напр.]] (''[[например]]'')
+*Russian: [[напр.]] {{i|[[например]]}}
 *Serbian: 
-*:Cyrillic: [[нпр.]] (''[[на]] [[пример]]'')
-*:Roman: [[npr.]] (''[[na]] [[primer]]'')
-*Slovak: [[napr.]] (''[[napríklad]]'')
-*Slovene: [[npr.]] (''[[na]] [[primer]]'')
+*:Cyrillic: [[нпр.]] {{i|[[на]] [[пример]]}}
+*:Roman: [[npr.]] {{i|[[na]] [[primer]]}}
+*Slovak: [[napr.]] {{i|[[napríklad]]}}
+*Slovene: [[npr.]] {{i|[[na]] [[primer]]}}
 *Spanish: [[por ejemplo]]
-*Swedish: [[t.ex.]], [[t ex]], [[tex.]] [[t. ex.]] (''[[till exempel]]''), [[exempelvis]]
-*Ukrainian: наприклад (''napryklad'')
-*Vietnamese: [[vd.]] ([[ví dụ]])
-{{bottom}}
+*Swedish: [[t.ex.]], [[t ex]], [[tex.]] [[t. ex.]] {{i|[[till exempel]]}}, [[exempelvis]]
+*Ukrainian: {{t|uk|наприклад|tr=napryklad}}
+*Vietnamese: [[vd.]] {{i|[[ví dụ]]}}
+{{trans-bottom}}
 
 [[Category:Initialisms]]
 
