--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -1,4 +1,4 @@
-{{see also|eg|ég|.eg|eg.|EG|Eg|-eg-|eg-}}
+{{also|eg|ég|.eg|eg.|EG|Eg|-eg-|eg-}}
 ==English==
 
 ===Alternative spellings===
@@ -17,47 +17,47 @@ Abbreviation of {{etyl|la}} {{term|exempli gratia|exempli gratiā|lang=la|for ex
 
 ====Usage notes====
 {{unreferenced}}
-* The list of examples following ''e.g.'' should not be exhaustive (in that case, ''[[i.e.]]'' should be used) and should not be followed by ''[[et cetera]]'' or ''[[etc.]]''  
+* The list of examples following ''e.g.'' should not be exhaustive (in that case, ''[[i.e.]]'' should be used) and should not be followed by ''[[et cetera]]'' or ''[[etc.]]''
 * Place ''e.g.'' between [[parentheses]] when used in written text and follow by a [[comma]] when used in its function as “for example”.
 * Opinion is mixed about whether this term should be italicized and whether it should be written with a separating non-breaking space as in ''e. g.''
 
 ====Translations====
 {{trans-top|abbreviation for “for example”}}
-*Arabic: [[على سبيل المثال]]
-*Bosnian: {{t|bs|npr.}} {{i|[[na]] [[primjer]]}}
-*Chinese: [[例如]] (li4 ru2)
-*Danish: [[f.eks.]], {{t|da|fx}} {{i|[[for eksempel]]}}
-*Dutch: {{t|nl|bv.}}, {{t|nl|bijv.}}, {{t|nl|bvb.}} {{i|{{t|nl|bijvoorbeeld}}}}
-*Esperanto: [[ekz.]] {{i|[[ekzemple]]}}
-*Finnish: [[esim.]] {{i|[[esimerkiksi]]}}
-*Faroese: [[t.d.]] {{i|[[til dømis]]}}
-*French: [[par ex.]], [[p. ex.]] {{i|[[par exemple]]}}<!-- are both right? -->
-*German: [[z. B.]] {{i|[[zum Beispiel]]}}
-*Greek: [[π.χ.]] {{i|[[παραδείγματος χάριν]]}}
-*{{ttbc|Hebrew}}: {{i|{{t|he|לדוגמא}}}}
-*Hungarian: [[pl.]] {{i|[[például]]}}
-*Icelandic: [[t.d.]] {{i|[[til dæmis]]}}
-*Italian: [[ad es.]] {{i|[[ad esempio]]}}
-*Japanese: [[例]] (rei)
-*Korean: [[예]] (ye)
-*Latvian: [[piem.]] {{i|[[piemēram]]}}
+* Arabic: [[على سبيل المثال]]
+* Bosnian: {{t|bs|npr.}} {{i|[[na]] [[primjer]]}}
+* Chinese: [[例如]] (li4 ru2)
+* Danish: [[f.eks.]], {{t|da|fx}} {{i|[[for eksempel]]}}
+* Dutch: {{t|nl|bv.}}, {{t|nl|bijv.}}, {{t|nl|bvb.}} {{i|{{t|nl|bijvoorbeeld}}}}
+* Esperanto: [[ekz.]] {{i|[[ekzemple]]}}
+* Faroese: [[t.d.]] {{i|[[til dømis]]}}
+* Finnish: [[esim.]] {{i|[[esimerkiksi]]}}
+* French: [[par ex.]], [[p. ex.]] {{i|[[par exemple]]}}<!-- are both right? -->
+* German: [[z. B.]] {{i|[[zum Beispiel]]}}
+* Greek: [[π.χ.]] {{i|[[παραδείγματος χάριν]]}}
+* {{ttbc|Hebrew}}: {{i|{{t|he|לדוגמא}}}}
+* Hungarian: [[pl.]] {{i|[[például]]}}
+* Icelandic: [[t.d.]] {{i|[[til dæmis]]}}
+* Italian: [[ad es.]] {{i|[[ad esempio]]}}
+* Japanese: [[例]] (rei)
+* Korean: [[예]] (ye)
 {{trans-mid}}
-*Lithuanian: [[pvz.]] {{i|[[pavyzdžiui]]}}
-*Norwegian: [[f.eks.]] {{i|[[for eksempel]]}}
-*Persian: [[براي مثال]]
-*Portuguese: [[por exemplo]]
-*Polish: [[np.]] {{i|[[na]] [[przykład]]}}
-*Romanian: [[de exemplu]]
-*Russian: [[напр.]] {{i|[[например]]}}
-*Serbian: 
-*:Cyrillic: [[нпр.]] {{i|[[на]] [[пример]]}}
-*:Roman: [[npr.]] {{i|[[na]] [[primer]]}}
-*Slovak: [[napr.]] {{i|[[napríklad]]}}
-*Slovene: [[npr.]] {{i|[[na]] [[primer]]}}
-*Spanish: [[por ejemplo]]
-*Swedish: [[t.ex.]], [[t ex]], [[tex.]] [[t. ex.]] {{i|[[till exempel]]}}, [[exempelvis]]
-*Ukrainian: {{t|uk|наприклад|tr=napryklad}}
-*Vietnamese: [[vd.]] {{i|[[ví dụ]]}}
+* Latvian: [[piem.]] {{i|[[piemēram]]}}
+* Lithuanian: [[pvz.]] {{i|[[pavyzdžiui]]}}
+* Norwegian: [[f.eks.]] {{i|[[for eksempel]]}}
+* Persian: [[براي مثال]]
+* Polish: [[np.]] {{i|[[na]] [[przykład]]}}
+* Portuguese: [[por exemplo]]
+* Romanian: [[de exemplu]]
+* Russian: [[напр.]] {{i|[[например]]}}
+* Serbian:
+*: Cyrillic: [[нпр.]] {{i|[[на]] [[пример]]}}
+*: Roman: [[npr.]] {{i|[[na]] [[primer]]}}
+* Slovak: [[napr.]] {{i|[[napríklad]]}}
+* Slovene: [[npr.]] {{i|[[na]] [[primer]]}}
+* Spanish: [[por ejemplo]]
+* Swedish: [[t.ex.]], [[t ex]], [[tex.]] [[t. ex.]] {{i|[[till exempel]]}}, [[exempelvis]]
+* Ukrainian: {{t|uk|наприклад|tr=napryklad}}
+* Vietnamese: [[vd.]] {{i|[[ví dụ]]}}
 {{trans-bottom}}
 
 [[Category:Initialisms]]
