iwiki +et <choose#5062708>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -139,6 +139,7 @@ From Old English [[ceosan|ċēosan]].
 
 [[zh-min-nan:choose]]
 [[de:choose]]
+[[et:choose]]
 [[el:choose]]
 [[fr:choose]]
 [[gl:choose]]
