/* Noun */ +Wikisaurus <flesh#5070033>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -19,6 +19,9 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; compare [[Old_High_German|Old
 # a [[yellow]]ish [[pink]] [[colour]]; the colour of some [[Caucasian]] human skin.
 #: {{color panel|FFC090}}
 
+====Synonyms====
+* See also [[Wikisaurus:body]]
+
 ====Translations====
 {{trans-top|body tissue}}
 * [[Catalan]]: [[carn]] {{f}}
